# growlerdb

./: .dockerignore  .gitignore  .markdownlint-cli2.jsonc  .mcp.json  .shellcheckrc  .yamllint.yml  BRAND.md  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMM-LICENSE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  GOVERNANCE.md  NOTICE  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  TRADEMARK.md  deny.toml  justfile  mise.toml  typos.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  cla.yml  connector.yml  nightly.yml  release.yml  scale-images.yml
bench/: .gitignore  Dockerfile.es  Dockerfile.gen  REPORT.md  bench.compose.yml  bench.py  bench_topk.py  gen_telemetry.py  load_es.py  run_topk.sh  telemetry.yaml  telemetry_cached.yaml
bench/scale/: README.md  RUNLOG.md  capture.py  coldtier_validate.py  compare_trino.py  convergence_check.py  harness.py  results_table.py  smoke.sh  staged_run.py
bench/trino/: iceberg.properties
brand/: README.md
clients/python/: README.md  example.py  smoke.py  test_client.py
clients/python/growlerdb/: __init__.py  client.py
connector/: README.md  mise.toml  pom.xml
connector-trino/: README.md  mise.toml  pom.xml
crates/growlerdb-backup/: Cargo.toml
crates/growlerdb-backup/src/: lib.rs
crates/growlerdb-backup/tests/: replica.rs  roundtrip.rs
crates/growlerdb-cli/: Cargo.toml  build.rs
crates/growlerdb-cli/src/: lib.rs  main.rs
crates/growlerdb-cli/tests/: client_sdk.rs  python_sdk.rs  serve.rs
crates/growlerdb-client/: Cargo.toml
crates/growlerdb-client/src/: lib.rs
crates/growlerdb-controlplane/: Cargo.toml
crates/growlerdb-controlplane/src/: lib.rs  registry.rs
crates/growlerdb-core/: Cargo.toml
crates/growlerdb-core/src/: api.rs  banner.txt  doc.rs  durable.rs  embed.rs  index_def.rs  lib.rs  query.rs  rerank.rs  routing.rs  timestamp.rs  window.rs
crates/growlerdb-embed/: Cargo.toml
crates/growlerdb-embed/src/: bge.rs  bge_rerank.rs  external.rs  lib.rs  secrets.rs
crates/growlerdb-engine/: Cargo.toml
crates/growlerdb-engine/src/: admin_service.rs  auth.rs  authn.rs  control_service.rs  engine.rs  error.rs  fence.rs  gateway.rs  gateway_grpc.rs  hydrate.rs  lib.rs  license.rs  lookup_service.rs  mcp_http.rs  node.rs  opensearch.rs  rbac.rs  remap.rs  rest.rs  search_service.rs  service_auth.rs  service_util.rs  shard_handle.rs  suggest_service.rs  tls.rs  topology.rs  windowed_ingest.rs  windowed_routing.rs  write_service.rs
crates/growlerdb-engine/src/testdata/: jwt_rsa_test_key.pem
crates/growlerdb-engine/tests/: compaction_remap.rs  control_rest.rs  e2e.rs  gateway_grpc.rs  http_metrics.rs  inline_hydration.rs  mcp_http.rs  mtls.rs  opensearch_http.rs  remote_node.rs  service_token.rs  stats_proxy.rs  tenant_isolation.rs  write_grpc.rs
crates/growlerdb-engine/tests/testdata/tls/: ca.crt  client.crt  client.key  server.crt  server.key
crates/growlerdb-index/: Cargo.toml
crates/growlerdb-index/src/: bundle.rs  hotcache.rs  lib.rs  location.rs  object_directory.rs  range_cache.rs  segment.rs  sidecar.rs  store.rs  vector.rs
crates/growlerdb-mcp/: Cargo.toml  README.md
crates/growlerdb-mcp/src/: backend.rs  client.rs  error.rs  lib.rs  query_syntax.md  server.rs
crates/growlerdb-mcp/tests/: mcp_stdio.rs
crates/growlerdb-proto/: Cargo.toml  build.rs
crates/growlerdb-proto/proto/growlerdb/v1/: admin.proto  common.proto  control.proto  search.proto  system.proto  write.proto
crates/growlerdb-proto/src/: lib.rs  service_token.rs
crates/growlerdb-proto/tests/: roundtrip.rs
crates/growlerdb-source/: Cargo.toml
crates/growlerdb-source/src/: key_scan.rs  lib.rs  plan_cache.rs  point_read.rs  shared_reader.rs
crates/growlerdb-telemetry/: Cargo.toml
crates/growlerdb-telemetry/src/: lib.rs
deploy/: Dockerfile
deploy/compose/: .env.external.example  README.md  arxiv.yaml  catalog.yaml  docker-compose.yml  external.yml  mcp-connect.sh  movies.yaml  pipeline.override.yml  readings-windowed.yaml  setup-polaris.sh
deploy/compose/chaos/: README.md  catalog-outage.sh  crash-recovery.sh  lib.sh
deploy/compose/demo-data/: Dockerfile  build_arxiv_slice.py  build_movies_slice.py  load_arxiv.py  load_movies.py
deploy/compose/lgtm/: grafana-provider.yaml  growlerdb-alert-rules.yml  otelcol-config.yaml  prometheus.yaml
deploy/compose/pipeline/: Dockerfile  README.md  generator.py  sink.py  telemetry-stream.yaml
deploy/compose/seed/: Dockerfile  seed.py
deploy/compose/trino/: iceberg.properties
deploy/helm/growlerdb/: .helmignore  Chart.yaml  README.md  values-hetzner.yaml  values-microk8s.yaml  values.yaml  (+1 more)
deploy/iac/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
deploy/k8s/: README.md  scale-up.sh
docs/: CNAME  Gemfile  _config.yml  comparison.md  configuration.md  demo-corpus.md  deployment.md  external-iceberg.md  ga-criteria.md  getting-started.md  index.md  install.md  migration-from-elasticsearch.md  opensearch-adapter.md  performance.md  query-language.md  reference.md  rest-api.md  roadmap.md  robots.txt  storage-tiering.md
docs/_includes/: head_custom.html
docs/img/: architecture.excalidraw
okf/: check.sh  glossary.md  index.md  log.md  overview.md  pre-ga-log.md  workflow.md
okf/product/: index.md  overview.md
okf/quality/: ci-and-gates.md  index.md  issues.md  overview.md  release-readiness.md  reliability.md  scalability.md  scale-test-plan.md
okf/system/: architecture.md  build.md  distribution.md  git-repo.md  index.md  observability.md  query-execution.md  source-health.md
scripts/: next-version.sh
signatures/: cla.json
ui/: .gitignore  .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
ui/e2e/: indexes.spec.ts  mocks.ts  screens.spec.ts  search.spec.ts  shell.spec.ts
ui/src/: App.svelte  app.css  main.ts
www/: CNAME  README.md  index.html  robots.txt  sitemap.xml
(+357 files in other folders)
