[package]
name = "growlerdb-controlplane"
description = "GrowlerDB Control Plane: index registry, shard map, leader election."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
growlerdb-core.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
fs2 = "0.4"
argon2 = { version = "0.5", features = ["std"] }

[dev-dependencies]
tempfile.workspace = true
