[package]
name = "growlerdb-core"
description = "Shared types, traits, and errors for GrowlerDB."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_norway.workspace = true
chrono.workspace = true
# Facade-only (subscribers live in the binaries): lets core surface data-placement anomalies
# (e.g. windowed upserts falling back to window 0) instead of silently misplacing rows.
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
