[package]
name = "growlerdb-embed"
description = "GrowlerDB local embedding runtime — a real BGE (BERT) embedder on Candle, with a hash-embedder fallback."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
growlerdb-core.workspace = true
tracing.workspace = true

# The local BGE runtime (BERT on Candle, pure Rust, no native/C deps). Behind a default-on
# `bge` feature so a `--no-default-features` build carries ZERO ML deps and the factory
# transparently falls back to the dev HashEmbedder.
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }
# WordPiece tokenizer loaded from a local tokenizer.json. default-features=false drops the
# native `onig` regex (C lib) and the indicatif progress bar; we opt into the pure-Rust
# `fancy-regex` backend instead (tokenizers requires exactly one) so the build stays
# native-dependency-free.
tokenizers = { version = "0.21", optional = true, default-features = false, features = ["fancy-regex"] }
# Parse the model's config.json into candle's BERT `Config`. Also (de)serializes the external
# provider request/response DTOs when the `external` feature is on.
serde_json = { workspace = true, optional = true }
# The opt-in EXTERNAL embedding/rerank path calls a hosted provider over HTTP with a
# server-side-only API key. Behind a default-on `external` feature so a `--no-default-features`
# build carries no HTTP/TLS stack; the factories then fail closed for an EXTERNAL field.
# `blocking` because the embed/rerank seams are synchronous (run on a dedicated thread — see
# external.rs). rustls-tls keeps the build native-dependency-free.
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { workspace = true, optional = true }

[features]
default = ["bge", "rerank", "external"]
bge = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
    "dep:serde_json",
]
# The local cross-encoder reranker (bge-reranker-base, a BERT model on Candle). Behind a
# default-on `rerank` feature that reuses the same pure-Rust ML deps as `bge`, so a
# `--no-default-features` build carries ZERO ML deps and `reranker_for` falls back to the
# dependency-free `HashReranker`.
rerank = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
    "dep:serde_json",
]
# The external HTTP embedding/rerank provider path.
external = ["dep:reqwest", "dep:serde", "dep:serde_json"]

[dev-dependencies]
tempfile.workspace = true
# A tiny in-process axum mock provider so the external HTTP path is tested offline (no network,
# no real provider): assert the `Authorization: Bearer` header is sent and a mock response parses.
axum = "0.8"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net"] }
