[package]
name = "growlerdb-embed"
description = "GrowlerDB local embedding runtime — a real BGE (BERT) embedder on Candle, with a hash-embedder fallback."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
growlerdb-core.workspace = true
tracing.workspace = true

# The local BGE embedder runtime: bge-small-en-v1.5 on ONNX Runtime (`ort`), behind a default-on
# `bge` feature. ONNX links a native libonnxruntime (fetched at build via `download-binaries`),
# a deliberate trade of the old pure-Rust Candle path for ~2-4x CPU throughput (D20/D46). A
# `--no-default-features` build carries no ML deps and the factory falls back to the dev HashEmbedder.
ort = { version = "2.0.0-rc.12", optional = true, default-features = false, features = ["std", "download-binaries", "tls-rustls"] }
# The local cross-encoder reranker still runs on Candle (bge-reranker-base) — moving it to ONNX is a
# follow-up; until then the `rerank` feature keeps these pure-Rust deps.
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }
# WordPiece tokenizer loaded from a local tokenizer.json. default-features=false drops the
# native `onig` regex (C lib) and the indicatif progress bar; we opt into the pure-Rust
# `fancy-regex` backend instead (tokenizers requires exactly one) so the build stays
# native-dependency-free.
tokenizers = { version = "0.23", optional = true, default-features = false, features = ["fancy-regex"] }
# Parse the model's config.json into candle's BERT `Config`. Also (de)serializes the external
# provider request/response DTOs when the `external` feature is on.
serde_json = { workspace = true, optional = true }
# The opt-in EXTERNAL embedding/rerank path calls a hosted provider over HTTP with a
# server-side-only API key. Behind a default-on `external` feature so a `--no-default-features`
# build carries no HTTP/TLS stack; the factories then fail closed for an EXTERNAL field.
# `blocking` because the embed/rerank seams are synchronous (run on a dedicated thread — see
# external.rs). rustls-tls keeps the build native-dependency-free.
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { workspace = true, optional = true }

[features]
default = ["bge", "rerank", "external"]
bge = [
    "dep:ort",
    "dep:tokenizers",
    "dep:serde_json",
]
# The local cross-encoder reranker (bge-reranker-base, a BERT model on Candle). Behind a
# default-on `rerank` feature that reuses the same pure-Rust ML deps as `bge`, so a
# `--no-default-features` build carries ZERO ML deps and `reranker_for` falls back to the
# dependency-free `HashReranker`.
rerank = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
    "dep:serde_json",
]
# The external HTTP embedding/rerank provider path.
external = ["dep:reqwest", "dep:serde", "dep:serde_json"]

[dev-dependencies]
tempfile.workspace = true
# A tiny in-process axum mock provider so the external HTTP path is tested offline (no network,
# no real provider): assert the `Authorization: Bearer` header is sent and a mock response parses.
axum = "0.8"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net"] }
