[package]
name = "growlerdb-engine"
description = "GrowlerDB search execution, hydration, and the engine façade."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
growlerdb-core.workspace = true
growlerdb-embed.workspace = true
growlerdb-controlplane.workspace = true
growlerdb-backup.workspace = true
opendal = { version = "0.55", features = ["services-s3", "services-fs"] }
growlerdb-index.workspace = true
growlerdb-source.workspace = true
growlerdb-proto.workspace = true
growlerdb-mcp.workspace = true
growlerdb-telemetry.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true }
serde_json.workspace = true
jsonwebtoken.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
getrandom = "0.2"
base64 = "0.22"
tonic.workspace = true
tokio = { workspace = true, features = ["rt", "sync"] }
tokio-stream = "0.1"
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "timeout"] }
# The MCP HTTP transport oneshots the /v1 router in-process.
tower = { version = "0.5", features = ["util"] }
libc = "0.2"
# mTLS provider selection: two rustls provider features are compiled in (ring via tonic, aws-lc-rs
# pulled transitively by opendal's reqwest TLS), so rustls can't auto-pick a process default. We
# install `ring` explicitly in `tls` — the provider our mTLS used before opendal added the ambiguity.
rustls = { version = "0.23", features = ["ring"] }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
http-body-util = "0.1"
# The compaction-under-hydration regression test writes real parquet
# fixture files — same major as growlerdb-source's pins.
parquet = { version = "58", features = ["arrow"] }
arrow-array = "58"
arrow-schema = "58"
