[package]
name = "growlerdb-index"
description = "The GrowlerDB index store (Tantivy segments + redb locator) and Index API."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tracing.workspace = true
growlerdb-core.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tantivy.workspace = true
redb.workspace = true
# Read-through object-storage serving of cold time-window shards. `blocking` gives a sync
# operator (its own background runtime) for tantivy's synchronous Directory reads.
opendal = { version = "0.55", features = ["services-fs", "services-s3", "blocking"] }
# Binary serde for the mergeable intermediate-aggregation partial (its HLL/t-digest
# sketches use non-string map keys that JSON can't represent).
postcard = { version = "1", features = ["use-std"] }
# Lightweight metrics facade for the cold-cache hit/miss counters — emitted at the
# source; a no-op unless the process installs a recorder (growlerdb-telemetry does).
metrics = "0.24"
# Pure-Rust HNSW for the approximate ANN index (D19) — picked over `hnsw_rs` for its small,
# permissive (MIT/Apache-2.0) tree and `serde` serialization. `with-serde` pulls in
# `serde-big-array` so the fixed 64-wide zero-layer node array (de)serializes.
instant-distance = { version = "0.6.1", features = ["with-serde"] }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true }
