[package]
name = "growlerdb-mcp"
description = "Read-only Model Context Protocol (MCP) server that fronts the GrowlerDB gateway for AI agents."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "growlerdb_mcp"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-std", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
axum = "0.8"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-std", "io-util", "net", "time"] }
